// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/TermsUse when hasLayout is false renders correctly 1`] = `
<div
  className="container"
>
  <div
    className="PageTitle container"
  >
    <div
      className="row"
    >
      <div
        className="col-xs-12"
      >
        <p
          className="PageTitle-type2"
        >
          Terms of Use
        </p>
      </div>
    </div>
  </div>
  <div
    className="ContentCard col-xs-12 static-page"
  >
    <div
      className="ContentCard-wrapper"
    >
      <h3
        className="content-title"
      >
        1. Terms
      </h3>
      <p>
        By accessing the website at 
        <a
          href="http://appii.io"
        >
          appii.io
        </a>
        , you are agreeing to be bound by these terms of use, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing this site. The materials contained in this website are protected by applicable copyright and trademark law.
      </p>
      <h3
        className="content-title"
      >
        2. Use License
      </h3>
      <ul
        className="list-disc"
        type="disc"
      >
        <li>
          Permission is granted to temporarily download one copy of the materials (information or software) on APPII Pty Ltd's website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:
          <ul>
            <li>
              modify or copy the materials;
            </li>
            <li>
              use the materials for any commercial purpose, or for any public display (commercial or non-commercial);
            </li>
            <li>
              attempt to decompile or reverse engineer any software contained on APPII Pty Ltd's website;
            </li>
            <li>
              remove any copyright or other proprietary notations from the materials; or
            </li>
            <li>
              transfer the materials to another person or "mirror" the materials on any other server.
            </li>
          </ul>
        </li>
        <li>
          This license shall automatically terminate if you violate any of these restrictions and may be terminated by APPII Pty Ltd at any time. Upon terminating your viewing of these materials or upon the termination of this license, you must destroy any downloaded materials in your possession whether in electronic or printed format.
        </li>
      </ul>
      <h3
        className="content-title"
      >
        3. Disclaimer
      </h3>
      <ul
        className="list-disc"
      >
        <li>
          The materials on APPII Pty Ltd's website are provided on an 'as is' basis. APPII Pty Ltd makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties including, without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.
        </li>
        <li>
          Further, APPII Pty Ltd does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its website or otherwise relating to such materials or on any sites linked to this site.
        </li>
      </ul>
      <h3
        className="content-title"
      >
        4. Limitations
      </h3>
      <p>
        In no event shall APPII Pty Ltd or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use the materials on APPII Pty Ltd's website, even if APPII Pty Ltd or a APPII Pty Ltd authorised representative has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.
      </p>
      <h3
        className="content-title"
      >
        5. Accuracy of materials
      </h3>
      <p>
        The materials appearing on APPII Pty Ltd's website could include technical, typographical, or photographic errors. APPII Pty Ltd does not warrant that any of the materials on its website are accurate, complete or current. APPII Pty Ltd may make changes to the materials contained on its website at any time without notice. However APPII Pty Ltd does not make any commitment to update the materials.
      </p>
      <h3
        className="content-title"
      >
        6. Links
      </h3>
      <p>
        APPII Pty Ltd has not reviewed all of the sites linked to its website and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by APPII Pty Ltd of the site. Use of any such linked website is at the user's own risk.
      </p>
      <h3
        className="content-title"
      >
        7. Modifications
      </h3>
      <p>
        APPII Pty Ltd may revise these terms of use for its website at any time without notice. By using this website you are agreeing to be bound by the then current version of these terms of service.
      </p>
      <h3
        className="content-title"
      >
        8. Governing Law
      </h3>
      <p>
        These terms and conditions are governed by and construed in accordance with the laws of United Kingdom and you irrevocably submit to the exclusive jurisdiction of the courts in that location.
      </p>
    </div>
  </div>
</div>
`;

exports[`containers/TermsUse when hasLayout is true renders correctly 1`] = `
<div>
  <div
    className="Layout-main"
  >
    <header>
      <div
        className="container-fluid"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12 col-md-6"
          >
            <div
              className="header-left"
            >
              <h1
                className="logo"
              >
                <a
                  href="http://appii.io"
                >
                  APPII
                </a>
              </h1>
            </div>
          </div>
        </div>
      </div>
    </header>
    <div
      className="container"
    >
      <div
        className="PageTitle container"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <p
              className="PageTitle-type2"
            >
              Terms of Use
            </p>
          </div>
        </div>
      </div>
      <div
        className="ContentCard col-xs-12 static-page"
      >
        <div
          className="ContentCard-wrapper"
        >
          <h3
            className="content-title"
          >
            1. Terms
          </h3>
          <p>
            By accessing the website at 
            <a
              href="http://appii.io"
            >
              appii.io
            </a>
            , you are agreeing to be bound by these terms of use, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing this site. The materials contained in this website are protected by applicable copyright and trademark law.
          </p>
          <h3
            className="content-title"
          >
            2. Use License
          </h3>
          <ul
            className="list-disc"
            type="disc"
          >
            <li>
              Permission is granted to temporarily download one copy of the materials (information or software) on APPII Pty Ltd's website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:
              <ul>
                <li>
                  modify or copy the materials;
                </li>
                <li>
                  use the materials for any commercial purpose, or for any public display (commercial or non-commercial);
                </li>
                <li>
                  attempt to decompile or reverse engineer any software contained on APPII Pty Ltd's website;
                </li>
                <li>
                  remove any copyright or other proprietary notations from the materials; or
                </li>
                <li>
                  transfer the materials to another person or "mirror" the materials on any other server.
                </li>
              </ul>
            </li>
            <li>
              This license shall automatically terminate if you violate any of these restrictions and may be terminated by APPII Pty Ltd at any time. Upon terminating your viewing of these materials or upon the termination of this license, you must destroy any downloaded materials in your possession whether in electronic or printed format.
            </li>
          </ul>
          <h3
            className="content-title"
          >
            3. Disclaimer
          </h3>
          <ul
            className="list-disc"
          >
            <li>
              The materials on APPII Pty Ltd's website are provided on an 'as is' basis. APPII Pty Ltd makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties including, without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.
            </li>
            <li>
              Further, APPII Pty Ltd does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its website or otherwise relating to such materials or on any sites linked to this site.
            </li>
          </ul>
          <h3
            className="content-title"
          >
            4. Limitations
          </h3>
          <p>
            In no event shall APPII Pty Ltd or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use the materials on APPII Pty Ltd's website, even if APPII Pty Ltd or a APPII Pty Ltd authorised representative has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.
          </p>
          <h3
            className="content-title"
          >
            5. Accuracy of materials
          </h3>
          <p>
            The materials appearing on APPII Pty Ltd's website could include technical, typographical, or photographic errors. APPII Pty Ltd does not warrant that any of the materials on its website are accurate, complete or current. APPII Pty Ltd may make changes to the materials contained on its website at any time without notice. However APPII Pty Ltd does not make any commitment to update the materials.
          </p>
          <h3
            className="content-title"
          >
            6. Links
          </h3>
          <p>
            APPII Pty Ltd has not reviewed all of the sites linked to its website and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by APPII Pty Ltd of the site. Use of any such linked website is at the user's own risk.
          </p>
          <h3
            className="content-title"
          >
            7. Modifications
          </h3>
          <p>
            APPII Pty Ltd may revise these terms of use for its website at any time without notice. By using this website you are agreeing to be bound by the then current version of these terms of service.
          </p>
          <h3
            className="content-title"
          >
            8. Governing Law
          </h3>
          <p>
            These terms and conditions are governed by and construed in accordance with the laws of United Kingdom and you irrevocably submit to the exclusive jurisdiction of the courts in that location.
          </p>
        </div>
      </div>
    </div>
  </div>
  <footer
    className="Footer"
  >
    <div
      className="container"
    >
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-md-6"
        >
          APPII Ltd © 2017
        </div>
        <div
          className="col-xs-12 col-md-6"
        >
          <ul
            className="Footer-nav"
          >
            <li>
              <a
                href="/privacy-policy"
                onClick={[Function]}
              >
                Privacy
              </a>
            </li>
            <li>
              <a
                href="/terms-of-use"
                onClick={[Function]}
              >
                Terms of Use
              </a>
            </li>
            <li>
              <a
                href="/cookies"
                onClick={[Function]}
              >
                Cookies
              </a>
            </li>
            <li
              className="social-link"
            >
              <a
                href="https://www.linkedin.com/company/10535440/"
              >
                <img
                  alt="linkedin"
                  src="linkedin_logo.svg"
                />
              </a>
            </li>
            <li
              className="social-link"
            >
              <a
                href="https://www.facebook.com/appii.io"
              >
                <img
                  alt="facebook"
                  src="facebook_logo.svg"
                />
              </a>
            </li>
            <li
              className="social-link"
            >
              <a
                href="https://twitter.com/appii_io"
              >
                <img
                  alt="twitter"
                  src="twitter_logo.svg"
                />
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </footer>
</div>
`;
